# zsh-histdb-converter

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/zsh_histdb_converter/: __init__.py  cli.py  converter.py  database.py  parser.py
tests/: test_converter.py  test_database.py  test_parser.py
