[project]
name = "zsh-histdb-converter"
version = "0.1.0"
description = "Convert your entire zsh history to Atuin with perfect compatibility"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    { name = "Shell History Community", email = "community@example.com" },
]
license = { text = "MIT" }
keywords = ["zsh", "shell", "history", "atuin", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/e0da/zsh-histdb-converter"
"Bug Reports" = "https://github.com/e0da/zsh-histdb-converter/issues"
"Source" = "https://github.com/e0da/zsh-histdb-converter"

[project.scripts]
zsh-histdb-converter = "zsh_histdb_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1", "zsh-histdb-converter"]

[tool.uv.sources]
zsh-histdb-converter = { workspace = true }
